# discord-bot

./: main.py  pyproject.toml  replit.md
bot/: commands.py  config.py  scheduler.py
config/: servers.json
database/: __init__.py  admin.py  database_manager.py  models.py
